--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,24 +7,15 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
-    url: '#posts'
-    weight: 20
-  - name: Projects
-    url: '#projects'
-    weight: 30
-  - name: Talks
-    url: '#talks'
-    weight: 40
   - name: Publications
-    url: '#featured'
-    weight: 50
-  - name: Contact
-    url: '#contact'
-    weight: 60
-
-# Link to a PDF of your resume/CV from the menu.
-# To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
-#  - name: CV
-#    url: uploads/resume.pdf
-#    weight: 70
+    url: '#publications'
+    weight: 20
+  - name: Working Papers
+    url: '#papers'
+    weight: 30
+  - name: Work in Progress
+    url: '#projects'
+    weight: 40
+  - name: CV
+    url: uploads/cv_corbin_miller.pdf
+    weight: 70
